--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,12 @@
 language: java
+sudo: true
+dist: trusty
 jdk:
   - openjdk17
 
-# Indica que estamos usando o sistema de compilação Maven
 script:
 - mvn clean install
 
-# Você pode adicionar etapas adicionais, como testes, aqui
-# Por exemplo, para executar os testes após a compilação:
-# script:
-#   - ./mvnw clean install
-#   - ./mvnw test
+before_install:
+  - chmod +x mvnw
+
