--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,11 @@ addons:
     organization: "robinhosztravis"
     token:
       secure: $SONAR_TOKEN # encrypted value of your token
-      
+
 script:
-- mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=robinhosztravis_robinhosz
+  # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=robinhosztravis_robinhosz
+
 
 before_install:
   - chmod +x mvnw
