--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ addons:
       secure: $SONAR_TOKEN # encrypted value of your token
 
 script:
-  # the following command line builds the project, runs the tests with coverage and then execute the SonarCloudss analysis
+  # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
   - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=robinhosztravis_robinhosz
 
 
