--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,11 @@ addons:
   sonarcloud:
     organization: "robinhosztravis"
     token:
-      secure: $SONAR_TOKEN # encrypted value of your token
+      secure: "**************************" # encrypted value of your token
 
 script:
   # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
-  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=robinhosztravis
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=robinhosztravis_robinhosz
 
 
 before_install:
