--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ addons:
   sonarcloud:
     organization: "robinhosztravis"
     token:
-      secure: "**************************" # encrypted value of your token
+      secure: "4f764d5378fa54fc6a984bb8afc04a0c43b35762" # encrypted value of your token
 
 script:
   # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
